# TimeTracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.admin  Dockerfile.admin.dockerignore  README.md  claude.md  docker-compose.yml  gen_plan_pdf.py  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/desktop/.next/: trace  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0003_interval_team.sql
apps/desktop/src-tauri/src/: auth.rs  client.rs  config.rs  db.rs  http.rs  idle.rs  interval_repository.rs  lib.rs  main.rs  reports.rs  screenshot.rs  sync_worker.rs  timer.rs
nginx/: nginx.conf
scripts/: start-minio.ps1
server/: Cargo.toml
server/.sqlx/: query-012fbfa96e79d9a07e6f63bb6df0a78989409dc72fbfaa107093f3a02af91be9.json  query-0173f44e53d511b385be23046c4967cf555db0b8958c795ad9a9e41d7cb1881f.json  query-01873a2da52763fe8253f50563ed723248fdf9ca822a2d56a757ab920802912f.json  query-06e017e4fdf6a0d8b57ae7aa9a3d369522d3217d6159777862cc7bd5d5704ddf.json  query-07fbf40ea2cbabdfe4b658aafe6be414660de15c3b085731120f63fabd1ce9fb.json  query-08a7ee108d5cca3834bc5c477627a74e23a80a4c541ed19b2bcd185d340d944e.json  query-08f0c51edb2a521c48924dc8187a97e2b443a0509e82a76788c121be5c623b7d.json  query-0dfacb9904cf7e321cfce47432efbb6e49d0a597d7138a45357cb13494f3dafb.json  query-0ff2705992ed24f309a926434187c0b5078c6103af4a8b4022523ac51760f67a.json  query-130f4010696c788009e63d461220590a7d51929f115b7c623db655b84fdbb439.json  query-18eb8aa89b37f0927d4c2a0de7e1ae909cd4760f5b0bbbf50e8bdfaa4bf67a43.json  query-197e781995fbc568880c8c03d45a3903e104df03037c3fc6fa055961d4c8aeed.json  query-19f27104b1f1bc9d3ae3053f89546484a62b7882c713e2405cfe4591fead4328.json  query-1c2d06ed2f97f6f01153ba599bfad9ce73095445bfb0a3494dae417a757d827c.json  query-1e09084f7419f91e31f0338493b5b75da1a0626ed9688b23d805f82fab04164e.json  query-1e33ed9ae061c1695a954f4d690776d92bab196d27ac5b129b31260496a52404.json  query-205c5dd8c6c7c32d798044afe50bdceea698e4c7d8f4783962e883ecffdff18b.json  query-20f47f5df5fe833a0b7f700a09f8dd65fe0bf10dda210aedd09604acbe680e56.json  query-21f48c535ddf8ea0e58a95ea7a74aa5f949d3a90853f6a686be929c66b554505.json  query-26272244bea75a0fc36368537b0b1cfb56c96ab2339b37e3c372e91aca118879.json  query-2699082831fc57dec6647acca747f671bfb8625991786ebd12db043a71e7ba78.json  query-26f1ab4f3360543fa0a9e51d40056655872fec1228f0d1bc0f775aac36a883ac.json  query-29366780eb5d779180b784fd3cf5fad6d958a29b45141db49973869ae30f850f.json  query-2982988852fc25a603578c6854f6d21d508241250e675b85a7ae8d47146a55a7.json  query-2b5d2303a7221fbe1b567c23d72c7c1bc1ac9c0df24b7b4aa24e8412c68eae32.json  query-32d4080d4ec2491587a794c65e4a6d294fd4701ed29d99418cc7d5c17ae5c359.json  query-33bd2909862b3b10eebbd1c739835f24eabe6d1ed6d2af1e59f4982e6aa2c2c5.json  query-38de83a505169d78bff6d5462ecdf10c67612e6834056b33498be46be7c72396.json  query-3e054a4935da860e07e5dfdb0f82d0fc9a0e4e0539afdb91ad9857ec49187fbc.json  query-3e64552737946cd12eab1eb1bedc5c3a5906191a8c0235dd847d2ac87c6ba298.json  query-3f8268342aa4e23af9b74eacb84866c84568d2a7b0f9c4ec1a8c3425a293b1f6.json  query-43f53bdef1a70014d25d4c21e694367fac3d7c5cb9b8650633c5287c52dc8728.json  query-48362d1cf20af1ff3a86b9beac8505a0c18ba61299499706e6384be3a1aab5b8.json  query-4a9f5eefe2972181806d194545b83ddf3e5e773c10b597208f958360a554ab05.json  query-4f996aab87ceabdc159689495cdce7812ff96a9757400e48667ce78249b7a83d.json  query-52458d3f428cea66f060a96053d2942f599277cbdfdd05a708e93b265753e3c7.json  query-555b6e55ea821cf9320a13b86ce8e1322fc6ecf412217ecac5bde17ab710c0e4.json  query-595f5ca2eed6ade17182839e9d304d8c36e3f9b819f468d3a9ee99789efd39e7.json  query-5b0af94023cb270751a516bac64a5bf5db132c0253f980407ad14e4678e2a071.json  query-5b259874b612983ffa1332a5fa2916863cc092b86846e1454f9d4d825993a3da.json  (+63 more)
server/migrations/: 0003_presence.sql  0004_meeting_status.sql  0005_screenshots.sql  0006_not_working_status.sql  0008_interval_kind.sql  0009_linear_links.sql  0012_analysis_results.sql  0013_leave.sql  0014_screenshot_captured_status.sql  0015_analysis_reports.sql  0016_teams.sql  0017_seed_teams.sql  0018_manual_tasks.sql  0019_onboarding.sql  0020_attendance.sql  0021_attendance_drop_partial.sql
server/src/: analysis_scheduler.rs  analysis_service.rs  attendance_scheduler.rs  attendance_service.rs  auth.rs  claude_provider.rs  email_service.rs  gemini_provider.rs  jwt.rs  leave_service.rs  lib.rs  linear_service.rs  main.rs  middleware.rs  report_service.rs  role.rs  sampler.rs  state.rs  storage.rs  summary_generator.rs  ticket_cache.rs  upload_service.rs  vision_analyzer.rs
server/src/db/: analysis_reports.rs  analysis_results.rs  attendance.rs  intervals.rs  leave.rs  linear_repository.rs  manual_tasks.rs  mod.rs  onboarding.rs  presence.rs  refresh_tokens.rs  screenshots.rs  teams.rs  ticket_requests.rs  users.rs
server/src/routes/: admin.rs  attendance.rs  auth.rs  health.rs  leave.rs  linear.rs  mod.rs  onboarding.rs  reports.rs  tasks.rs  teams.rs  ticket_requests.rs  uploads.rs
server/tests/: admin.rs  ai_context.rs  analysis_reports.rs  analyze_range.rs  attendance.rs  auth_guards.rs  health.rs  intervals.rs  leave.rs  linear.rs  manual_tasks.rs  onboarding.rs  presence.rs  reports.rs  screenshots_day.rs  tasks_api.rs  team_summary.rs  teams.rs  teams_api.rs
timetracker/: .env.example  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
timetracker/server/: Cargo.toml
timetracker/server/migrations/: 0001_init.sql  0002_intervals.sql  0007_refresh_tokens.sql  0010_ticket_requests.sql  0011_analysis_jobs.sql
timetracker/server/src/: auth.rs  config.rs  error.rs  jwt.rs  lib.rs  linear_service.rs  main.rs  presence.rs  state.rs  storage.rs  upload_service.rs
timetracker/server/src/db/: audit.rs  intervals.rs  mod.rs  presence.rs  users.rs
timetracker/server/src/routes/: admin.rs  auth.rs  intervals.rs  mod.rs  presence.rs  uploads.rs
timetracker/server/tests/: admin.rs  auth_guards.rs  health.rs  intervals.rs  linear.rs  presence.rs
(+220 files in other folders)
