[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TimeTracker API server (Axum + PostgreSQL + SQLx)"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

# Idempotent dev seed (1 HR + 1 Employee). Run: cargo run -p server --bin seed
[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# HTTP client for the Linear GraphQL API (rustls — no C toolchain).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Email (approval notifications). rustls — no OpenSSL.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
# Base64 for inlining screenshot bytes into Gemini vision requests (STEP 10).
base64 = "0.22"
