[package]
name = "timetracker-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TimeTracker desktop application (Tauri 2 shell)"

# The Tauri app is split into a library (so it can target mobile / be tested) and
# a thin binary. See Tauri 2 project conventions.
[lib]
name = "timetracker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Local SQLite source-of-truth (Rule 1). Wired into a real db module in a later step.
sqlx = { workspace = true }
# HTTP client to talk to the API server.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# OS-native idle timer for idle detection (Rule: idle.rs). Uses CoreGraphics on
# macOS (no Input-Monitoring permission needed) and GetLastInputInfo on Windows.
user-idle = "0.6"
# Screen capture (Rule: screenshot.rs) + JPEG encoding. `image` must match the
# version xcap depends on (^0.25) so RgbaImage types unify.
xcap = "0.9"
image = "0.25"

# Secure token storage in the OS keychain (Rule 6).
# keyring v3 makes the platform backend OPT-IN — without a native feature it
# silently falls back to a non-persistent in-memory mock store. Enable the real
# OS credential store per platform.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[features]
# Used by `tauri dev`/`tauri build` to enable webview devtools, etc.
custom-protocol = ["tauri/custom-protocol"]
